WIP #17 visible field bug fix
Use the visibleFields var when rendering fields.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -621,3 +621,7 @@ ol[type="a"] {
 .error-summary_li_nested {
   list-style-type: none;
 }
+
+.error-spacing_div {
+  padding-top: 0.5em;
+}
